<resources>
    <string name="app_name">DigitPlay</string>
    <string name="timeUp">Time Up!!!</string>
    <string name="score">Score</string>
    <string name="total_solved">Total Solved</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="accuracy">Accuracy</string>
    <string name="multiplySign">x</string>
    <string name="plusSign">+</string>
    <string name="equalSign">=</string>
    <string name="check">Check</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">Clear</string>
    <string name="easy">Easy</string>
    <string name="digit_play">Digit Play</string>
    <string name="moderate">Moderate</string>
    <string name="hard">Hard</string>
    <string name="hard_plus">Hard +</string>
    <string name="operator_overload">Operator Overload</string>
    <string name="shape_sudoku">Shape Sudoku</string>
    <string name="questionMark">!</string>
</resources>