<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DigitPlay.DigitPlayGameActivity"
    android:id="@+id/r1">

    <TextView
        android:id="@+id/timer_321"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:translationZ="1dp"
        android:textColor="@color/black"
        android:textSize="100sp"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num1"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/multiplySign"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num2"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:text="@string/plusSign"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/num3"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/equalSign"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:textSize="25sp" />
    </LinearLayout>


    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edit_text1"
        android:text="@string/check"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circular_button"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/one"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_toStartOf="@id/two"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/two"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_3"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/four"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/two"
            android:layout_toStartOf="@id/five"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_4"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/five"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/two"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_5"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/six"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/two"
            android:layout_toEndOf="@id/five"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_6"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/five"
            android:layout_toStartOf="@id/eight"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_7"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/five"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/five"
            android:layout_toEndOf="@id/eight"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_9"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:layout_below="@id/eight"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_num_button"
            android:text="@string/clear" />
    </RelativeLayout>
</RelativeLayout>