<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/digiplay"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="40dp"
        android:alpha=".25"
        android:rotation="150"
        android:text="@string/_4"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:alpha=".5"
        android:text="@string/plusSign" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:alpha=".4"
        android:rotation="45"
        android:text="@string/plusSign"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:alpha=".15"
        android:rotation="30"
        android:text="@string/_6"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:alpha=".15"
        android:rotation="-30"
        android:text="@string/_1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:alpha=".50"
        android:rotation="-120"
        android:text="@string/_3"
        android:textSize="35sp" />

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_num_button">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/easy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/med"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/moderate"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/hard"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/hardplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/hard_plus"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Practice"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rounded_num_button">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/easyComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/easy"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/medComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/moderate"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hardComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/hard"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/hardplusComp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text1"
                android:text="@string/hard_plus"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/competetive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Competetive"
            android:textSize="20sp" />

        <Button
            android:id="@+id/alltogether"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_edit_text1"
            android:text="All"
            android:textColor="@color/white" />

    </RelativeLayout>


</RelativeLayout>