<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShapeShift.ShapeShiftGameActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_num_button"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/i1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/i2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/i3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/i4" />

    </LinearLayout>

    <View
        android:id="@+id/vdivider1"
        android:layout_width="3dp"
        android:layout_height="50dp"
        android:layout_below="@id/ll1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/orange" />

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vdivider1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num1"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num2"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num3"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num4"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/ll2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        app:srcCompat="@drawable/ic_down_arrow" />

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_num_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </LinearLayout>

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edit_text1"
        android:text="Check"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/check">

        <Button
            android:id="@+id/one"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/four"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_num_button"
            android:text="@string/_4"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/clear"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_num_button"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll4"
        android:text="Clear" />

</RelativeLayout>